# vis

./: .gitignore  LICENSE  README.md  pyproject.toml
vis/: __init__.py  boxplot.py  color.py  growl.py  plot.py  utils.py
vis/style/: default.mplstyle
