[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vis"
version= "0.0.1"
description = "Utility functions for data viz with matplotlib"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "vis.__version__"}