[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vis"
version= "0.0.1"
description = "Utility functions for data vis with matplotlib"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "statannotations",
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.package-data]
vis.style = ["*.mplstyle"]